--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gsap": "^3.14.2",
     "next": "16.1.6",
     "react": "19.2.3",
+    "react-datepicker": "^9.1.0",
     "react-dom": "19.2.3",
     "react-icons": "^5.5.0",
     "react-responsive": "^10.0.1",
